[gd_scene load_steps=15 format=3 uid="uid://o458ah6nqt0b"]

[ext_resource type="Script" uid="uid://d0cmvwdbjrw0d" path="res://scripts/uis/level_editor/LevelSettingsMenu.gd" id="1_w1w2a"]
[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="2_63owt"]
[ext_resource type="LabelSettings" uid="uid://cd8gvl774mr2v" path="res://assets/style/label_settings/medium_label.tres" id="3_7xple"]
[ext_resource type="Texture2D" uid="uid://b0b34lhgbuxy5" path="res://assets/textures/tilesets/plains.png" id="3_8dnfc"]
[ext_resource type="LabelSettings" uid="uid://bf4264al524mo" path="res://assets/style/label_settings/shadow_big_label.tres" id="3_urjfx"]
[ext_resource type="LabelSettings" uid="uid://b35bwhibubxgx" path="res://assets/style/label_settings/small_medium_label.tres" id="4_8hvk5"]
[ext_resource type="Texture2D" uid="uid://cr2dnnd27sq2g" path="res://assets/textures/tilesets/mountains.png" id="4_bl5vv"]
[ext_resource type="Texture2D" uid="uid://c6j61lpa3u1bc" path="res://assets/textures/tilesets/caves.png" id="4_roww5"]
[ext_resource type="Texture2D" uid="uid://qukl3jj38j8b" path="res://assets/textures/tilesets/volcano.png" id="5_upsi7"]
[ext_resource type="Script" uid="uid://b46mrpwhqj1bn" path="res://scripts/uis/ButtonList.gd" id="7_wewji"]

[sub_resource type="AtlasTexture" id="AtlasTexture_spcv7"]
atlas = ExtResource("3_8dnfc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_01mmy"]
atlas = ExtResource("4_roww5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf047"]
atlas = ExtResource("5_upsi7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_haad4"]
atlas = ExtResource("4_bl5vv")
region = Rect2(16, 0, 16, 16)

[node name="LevelSettingsMenu" type="Control" node_paths=PackedStringArray("level_name_edit", "level_description_edit", "level_difficulty_buttons", "level_theme_buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1w2a")
level_name_edit = NodePath("HBoxContainer/LeftElements/LevelName")
level_description_edit = NodePath("HBoxContainer/LeftElements/LevelDescription")
level_difficulty_buttons = NodePath("HBoxContainer/RightElements/LevelDifficulties/ButtonList")
level_theme_buttons = NodePath("HBoxContainer/RightElements/LevelThemes/ButtonList")

[node name="BackgroudColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.360784)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -112.0
offset_right = 36.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="LeftElements" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_63owt")
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/LeftElements"]
layout_mode = 2
text = "Level Name"
label_settings = ExtResource("3_7xple")

[node name="LevelName" type="LineEdit" parent="HBoxContainer/LeftElements"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 2
theme = ExtResource("2_63owt")
placeholder_text = "level.name"

[node name="Label2" type="Label" parent="HBoxContainer/LeftElements"]
layout_mode = 2
text = "Level Description"
label_settings = ExtResource("4_8hvk5")

[node name="LevelDescription" type="TextEdit" parent="HBoxContainer/LeftElements"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
theme = ExtResource("2_63owt")
placeholder_text = "level.description"

[node name="RightElements" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_63owt")
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/RightElements"]
layout_mode = 2
text = "Level Themes"
label_settings = ExtResource("3_7xple")
horizontal_alignment = 1

[node name="LevelThemes" type="HBoxContainer" parent="HBoxContainer/RightElements"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PlainsButton" type="Button" parent="HBoxContainer/RightElements/LevelThemes"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "Plains"
icon = SubResource("AtlasTexture_spcv7")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="CavesButton" type="Button" parent="HBoxContainer/RightElements/LevelThemes"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "Caves"
icon = SubResource("AtlasTexture_01mmy")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VolcanoButton" type="Button" parent="HBoxContainer/RightElements/LevelThemes"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "Volcano"
icon = SubResource("AtlasTexture_tf047")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="MountainsButton" type="Button" parent="HBoxContainer/RightElements/LevelThemes"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_font_sizes/font_size = 12
toggle_mode = true
keep_pressed_outside = true
text = "Mountains"
icon = SubResource("AtlasTexture_haad4")
clip_text = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ButtonList" type="Node" parent="HBoxContainer/RightElements/LevelThemes" node_paths=PackedStringArray("buttons")]
script = ExtResource("7_wewji")
buttons = [NodePath("../PlainsButton"), NodePath("../CavesButton"), NodePath("../VolcanoButton"), NodePath("../MountainsButton")]

[node name="Label2" type="Label" parent="HBoxContainer/RightElements"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Level Difficulties"
label_settings = ExtResource("4_8hvk5")
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelDifficulties" type="HBoxContainer" parent="HBoxContainer/RightElements"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Beginer" type="Button" parent="HBoxContainer/RightElements/LevelDifficulties"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "label.level.difficulty.beginer_friendly"
clip_text = true

[node name="Easy" type="Button" parent="HBoxContainer/RightElements/LevelDifficulties"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "label.level.difficulty.easy"
clip_text = true

[node name="Normal" type="Button" parent="HBoxContainer/RightElements/LevelDifficulties"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "label.level.difficulty.normal"
clip_text = true

[node name="Hard" type="Button" parent="HBoxContainer/RightElements/LevelDifficulties"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "label.level.difficulty.hard"
clip_text = true

[node name="Extreme" type="Button" parent="HBoxContainer/RightElements/LevelDifficulties"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
toggle_mode = true
keep_pressed_outside = true
text = "label.level.difficulty.extreme"
clip_text = true

[node name="ButtonList" type="Node" parent="HBoxContainer/RightElements/LevelDifficulties" node_paths=PackedStringArray("buttons")]
script = ExtResource("7_wewji")
buttons = [NodePath("../Beginer"), NodePath("../Easy"), NodePath("../Normal"), NodePath("../Hard"), NodePath("../Extreme")]

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.5
offset_top = -105.0
offset_right = 106.5
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_63owt")
text = "button.back"

[node name="MenuTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -448.0
offset_top = 38.0
offset_right = 448.0
offset_bottom = 102.0
grow_horizontal = 2
theme = ExtResource("2_63owt")
text = "Level Settings"
label_settings = ExtResource("3_urjfx")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
